tests/NormalTests/paczka1/fuzzy1/49553993.err
Error in line 2: S719 A981 32,7
Error in line 5: FwxVlbE S964 82,3
Error in line 20: S719 S964 97,6
Error in line 31: hZOFsg1V S964 34,5
Error in line 30: R35ObPEUUgX S227 69,9
Error in line 25: WSf01dZ4Qn S719 13,5
Error in line 37: FwxVlbE S964 19,1
